// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Block renders block with button inside option 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__button-inside wp-block-search__text-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    accessibilityLabel="search-block-label"
    accessibilityRole="none"
    accessible={true}
  >
    <View>
      <RCTAztecView
        accessible={true}
        activeFormats={Array []}
        blockType={
          Object {
            "tag": "p",
          }
        }
        disableEditingMenu={false}
        focusable={true}
        fontFamily="serif"
        fontSize={16}
        isMultiline={false}
        maxImagesWidth={200}
        onBackspace={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onContentSizeChange={[Function]}
        onEnter={[Function]}
        onFocus={[Function]}
        onHTMLContentWithCursor={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onSelectionChange={[Function]}
        onStartShouldSetResponder={[Function]}
        placeholder="Add label…"
        placeholderTextColor="gray"
        style={
          Object {
            "backgroundColor": undefined,
            "maxWidth": undefined,
            "minHeight": 0,
          }
        }
        text={
          Object {
            "eventCount": undefined,
            "linkTextColor": undefined,
            "selection": null,
            "tag": "p",
            "text": "<p>Search</p>",
          }
        }
        triggerKeyCodes={Array []}
      />
    </View>
  </View>
  <View
    style={
      Array [
        undefined,
        undefined,
        false,
      ]
    }
  >
    <View
      accessibilityLabel="search-block-input"
      accessibilityRole="none"
      accessible={true}
    >
      <TextInput
        className="wp-block-search__input"
        ellipsizeMode="tail"
        fontFamily="serif"
        isSelected={false}
        label={null}
        numberOfLines={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Optional placeholder…"
        scrollEnabled={false}
        style={
          Array [
            Array [
              false,
              undefined,
              undefined,
            ],
            undefined,
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          undefined,
          false,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="search-block-button"
        accessibilityRole="none"
        accessible={true}
        onLayout={[Function]}
      >
        <View>
          <RCTAztecView
            accessible={true}
            activeFormats={Array []}
            blockType={
              Object {
                "tag": "p",
              }
            }
            disableEditingMenu={false}
            focusable={true}
            fontFamily="serif"
            fontSize={16}
            isMultiline={false}
            maxImagesWidth={200}
            minWidth={75}
            onBackspace={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onContentSizeChange={[Function]}
            onEnter={[Function]}
            onFocus={[Function]}
            onHTMLContentWithCursor={[Function]}
            onKeyDown={[Function]}
            onPaste={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onSelectionChange={[Function]}
            onStartShouldSetResponder={[Function]}
            placeholder=""
            placeholderTextColor="gray"
            style={
              Object {
                "backgroundColor": undefined,
                "maxWidth": NaN,
                "minHeight": 0,
              }
            }
            text={
              Object {
                "eventCount": undefined,
                "linkTextColor": undefined,
                "selection": null,
                "tag": "p",
                "text": "<p>Search Button</p>",
              }
            }
            textAlign="center"
            triggerKeyCodes={Array []}
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Search Block renders block with icon button option matches snapshot 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__button-outside wp-block-search__icon-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    accessibilityLabel="search-block-label"
    accessibilityRole="none"
    accessible={true}
  >
    <View>
      <RCTAztecView
        accessible={true}
        activeFormats={Array []}
        blockType={
          Object {
            "tag": "p",
          }
        }
        disableEditingMenu={false}
        focusable={true}
        fontFamily="serif"
        fontSize={16}
        isMultiline={false}
        maxImagesWidth={200}
        onBackspace={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onContentSizeChange={[Function]}
        onEnter={[Function]}
        onFocus={[Function]}
        onHTMLContentWithCursor={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onSelectionChange={[Function]}
        onStartShouldSetResponder={[Function]}
        placeholder="Add label…"
        placeholderTextColor="gray"
        style={
          Object {
            "backgroundColor": undefined,
            "maxWidth": undefined,
            "minHeight": 0,
          }
        }
        text={
          Object {
            "eventCount": undefined,
            "linkTextColor": undefined,
            "selection": null,
            "tag": "p",
            "text": "<p>Search</p>",
          }
        }
        triggerKeyCodes={Array []}
      />
    </View>
  </View>
  <View
    style={
      Array [
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      accessibilityLabel="search-block-input"
      accessibilityRole="none"
      accessible={true}
    >
      <TextInput
        className="wp-block-search__input"
        ellipsizeMode="tail"
        fontFamily="serif"
        isSelected={false}
        label={null}
        numberOfLines={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Optional placeholder…"
        scrollEnabled={false}
        style={
          Array [
            Array [
              undefined,
              undefined,
              undefined,
            ],
            undefined,
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          undefined,
          false,
          undefined,
          undefined,
        ]
      }
    >
      Svg
    </View>
  </View>
</View>
`;

exports[`Search Block renders block with label hidden matches snapshot 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__button-outside wp-block-search__text-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    style={
      Array [
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      accessibilityLabel="search-block-input"
      accessibilityRole="none"
      accessible={true}
    >
      <TextInput
        className="wp-block-search__input"
        ellipsizeMode="tail"
        fontFamily="serif"
        isSelected={false}
        label={null}
        numberOfLines={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Optional placeholder…"
        scrollEnabled={false}
        style={
          Array [
            Array [
              undefined,
              undefined,
              undefined,
            ],
            undefined,
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          undefined,
          false,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="search-block-button"
        accessibilityRole="none"
        accessible={true}
        onLayout={[Function]}
      >
        <View>
          <RCTAztecView
            accessible={true}
            activeFormats={Array []}
            blockType={
              Object {
                "tag": "p",
              }
            }
            disableEditingMenu={false}
            focusable={true}
            fontFamily="serif"
            fontSize={16}
            isMultiline={false}
            maxImagesWidth={200}
            minWidth={75}
            onBackspace={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onContentSizeChange={[Function]}
            onEnter={[Function]}
            onFocus={[Function]}
            onHTMLContentWithCursor={[Function]}
            onKeyDown={[Function]}
            onPaste={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onSelectionChange={[Function]}
            onStartShouldSetResponder={[Function]}
            placeholder=""
            placeholderTextColor="gray"
            style={
              Object {
                "backgroundColor": undefined,
                "maxWidth": NaN,
                "minHeight": 0,
              }
            }
            text={
              Object {
                "eventCount": undefined,
                "linkTextColor": undefined,
                "selection": null,
                "tag": "p",
                "text": "<p>Search Button</p>",
              }
            }
            textAlign="center"
            triggerKeyCodes={Array []}
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Search Block renders with default configuration matches snapshot 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__button-outside wp-block-search__text-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    accessibilityLabel="search-block-label"
    accessibilityRole="none"
    accessible={true}
  >
    <View>
      <RCTAztecView
        accessible={true}
        activeFormats={Array []}
        blockType={
          Object {
            "tag": "p",
          }
        }
        disableEditingMenu={false}
        focusable={true}
        fontFamily="serif"
        fontSize={16}
        isMultiline={false}
        maxImagesWidth={200}
        onBackspace={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onContentSizeChange={[Function]}
        onEnter={[Function]}
        onFocus={[Function]}
        onHTMLContentWithCursor={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onSelectionChange={[Function]}
        onStartShouldSetResponder={[Function]}
        placeholder="Add label…"
        placeholderTextColor="gray"
        style={
          Object {
            "backgroundColor": undefined,
            "maxWidth": undefined,
            "minHeight": 0,
          }
        }
        text={
          Object {
            "eventCount": undefined,
            "linkTextColor": undefined,
            "selection": null,
            "tag": "p",
            "text": "<p>Search</p>",
          }
        }
        triggerKeyCodes={Array []}
      />
    </View>
  </View>
  <View
    style={
      Array [
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      accessibilityLabel="search-block-input"
      accessibilityRole="none"
      accessible={true}
    >
      <TextInput
        className="wp-block-search__input"
        ellipsizeMode="tail"
        fontFamily="serif"
        isSelected={false}
        label={null}
        numberOfLines={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Optional placeholder…"
        scrollEnabled={false}
        style={
          Array [
            Array [
              undefined,
              undefined,
              undefined,
            ],
            undefined,
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          undefined,
          false,
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="search-block-button"
        accessibilityRole="none"
        accessible={true}
        onLayout={[Function]}
      >
        <View>
          <RCTAztecView
            accessible={true}
            activeFormats={Array []}
            blockType={
              Object {
                "tag": "p",
              }
            }
            disableEditingMenu={false}
            focusable={true}
            fontFamily="serif"
            fontSize={16}
            isMultiline={false}
            maxImagesWidth={200}
            minWidth={75}
            onBackspace={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onContentSizeChange={[Function]}
            onEnter={[Function]}
            onFocus={[Function]}
            onHTMLContentWithCursor={[Function]}
            onKeyDown={[Function]}
            onPaste={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onSelectionChange={[Function]}
            onStartShouldSetResponder={[Function]}
            placeholder=""
            placeholderTextColor="gray"
            style={
              Object {
                "backgroundColor": undefined,
                "maxWidth": NaN,
                "minHeight": 0,
              }
            }
            text={
              Object {
                "eventCount": undefined,
                "linkTextColor": undefined,
                "selection": null,
                "tag": "p",
                "text": "<p>Search Button</p>",
              }
            }
            textAlign="center"
            triggerKeyCodes={Array []}
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Search Block renders with no-button option matches snapshot 1`] = `
<View
  accessibilityElementsHidden={true}
  className="wp-block-search__no-button"
  importantForAccessibility="no-hide-descendants"
>
  <View
    accessibilityLabel="search-block-label"
    accessibilityRole="none"
    accessible={true}
  >
    <View>
      <RCTAztecView
        accessible={true}
        activeFormats={Array []}
        blockType={
          Object {
            "tag": "p",
          }
        }
        disableEditingMenu={false}
        focusable={true}
        fontFamily="serif"
        fontSize={16}
        isMultiline={false}
        maxImagesWidth={200}
        onBackspace={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onContentSizeChange={[Function]}
        onEnter={[Function]}
        onFocus={[Function]}
        onHTMLContentWithCursor={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onSelectionChange={[Function]}
        onStartShouldSetResponder={[Function]}
        placeholder="Add label…"
        placeholderTextColor="gray"
        style={
          Object {
            "backgroundColor": undefined,
            "maxWidth": undefined,
            "minHeight": 0,
          }
        }
        text={
          Object {
            "eventCount": undefined,
            "linkTextColor": undefined,
            "selection": null,
            "tag": "p",
            "text": "<p>Search</p>",
          }
        }
        triggerKeyCodes={Array []}
      />
    </View>
  </View>
  <View
    accessibilityLabel="search-block-input"
    accessibilityRole="none"
    accessible={true}
  >
    <TextInput
      className="wp-block-search__input"
      ellipsizeMode="tail"
      fontFamily="serif"
      isSelected={false}
      label={null}
      numberOfLines={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Optional placeholder…"
      scrollEnabled={false}
      style={
        Array [
          Array [
            undefined,
            undefined,
            undefined,
          ],
          undefined,
        ]
      }
    />
  </View>
</View>
`;
